# zkmove

./: .gitignore  0001-prepare-constant-table.patch  0002-introduce-static-info.patch  0003-refactor-static-info.patch  0004-impl-opcode-ld_const.patch  0005-fix-fetch-arg_num-from-static-info.patch  Cargo.toml  Makefile  README.md  docs-development.md  mkdocs.yml  rust-toolchain
aggregator/: Cargo.toml
aggregator/configs/: app_circuit_aggregation.config  vm_circuit_aggregation.config
aggregator/data/: README.md
aggregator/params/: README.md  setup.sh
aggregator/src/: aggregation.rs  lib.rs  test.rs
aggregator/src/tests/: app_circuit_aggregation.rs  mod.rs  simple_vm_circuit.rs  test_circuit_1.rs  test_circuit_2.rs  vm_circuit_compression.rs
aptos-move-witnesses/: Cargo.toml  README.md
aptos-move-witnesses/src/: exec_state.rs  lib.rs  native_functions.rs  preprocessor.rs  static_info.rs  step_state.rs  types.rs  utils.rs  value_repr.rs  witness_preprocessor.rs
aptos-move-witnesses/src/static_info/: bytecode.rs  constant.rs  function.rs
aptos-move-witnesses/src/step_state/: execution_state.rs
aptos-move-witnesses/src/types/: sub_index.rs  value_header.rs  word.rs
cli/: Cargo.toml  README.md
cli/example/: Move.toml
cli/example/params/: README.md
cli/example/sources/: zkhash.move  zkhash_example.move.bak
cli/examples/: circuit_info_gen.rs
cli/params/: kzg_bn254_12.srs
cli/release/v0.3.0/: README.md
cli/release/v0.4.0/: README.md
cli/src/: README.md  aptos_cmds.rs  aptos_utils.rs  common.rs  lib.rs  main.rs  poseidon_cmds.rs  prove_cmd.rs  sui_cmds.rs  to_ark.rs  util_cmd.rs  verifier_utils.rs  vm_cmds.rs
cli/src/api/: circuit.rs  context.rs  dry_run.rs  mod.rs  poseidon.rs  prove.rs  setup.rs  verify.rs  witness.rs
cli/src/aptos_cmds/: utils.rs
cli/src/commands/: aptos.rs  mod.rs  poseidon.rs  setup.rs  sui.rs  vm.rs
cli/src/ops/: aptos.rs  circuit.rs  mod.rs  prove.rs  run.rs  sui.rs  test_verifier.rs  verify.rs
cli/tests/: zkmove_cli_test.rs
common/crypto/: Cargo.toml
common/crypto/src/: lib.rs  poseidon.rs
common/error/: Cargo.toml
common/error/src/: lib.rs
common/types/: Cargo.toml
common/types/src/: lib.rs  reference.rs  value.rs
fast-circuit/: Cargo.toml
fast-circuit/src/: chip_tests.rs  lib.rs  move_circuit.rs  program_block.rs
fast-circuit/src/chips/: conditional_select.rs
functional-tests/: .gitignore  Cargo.toml  Move.toml  README.md  gen_witness.sh  test_cases.txt
functional-tests/benches/: circuit_benchmark.rs
functional-tests/benches/scripts/: call_generic.move  loop1.move
functional-tests/sources/: SecondArg.move  Struct_.move  TestCase.move
functional-tests/src/: lib.rs  run_config.rs
functional-tests/tests/: second_arg_only.rs  testsuite.rs
functional-tests/tests/modules/: counter.move  entry_fun_return.move  entry_fun_test.move  eth_data.move  generics.move  globals.move  ref_arith.move  reference.move  token.move  vector.move  wallet.move
functional-tests/tests/scripts/: add.move  add_u64.move  add_u8.move  arith_integer.move  bitand.move  borrow_global.move  branch1.move  branch2.move  call_generic.move  call_ref.move  cast_u64.move  counter.move  div_u8.move  equality.move  eth_data_test.move  fibonacci.move  fibonacci1.move  ge.move  generic_types.move  gt.move  imm_ref.move  ld_const.move  le.move  loop.move  loop1.move  lt.move  mod_u8.move  move_locals.move  move_to_generic.move  mul_u8.move  pass_ref.move  read_ref.move  shl.move  shl_shr.move  sub_u8.move  token.move  token2.move  token_ref.move  vector1.move  vector3.move  (+2 more)
movelang/: Cargo.toml
movelang/src/: account_address.rs  argument.rs  compiler.rs  extended_value.rs  flattened_value.rs  generic_call_graph.rs  lib.rs  loader.rs  state.rs  type_safety.rs  type_transition.rs  utility.rs  value.rs  value_ext.rs  word.rs
movelang/src/value/: value_header.rs
proof-system/: Cargo.toml
proof-system/src/: lib.rs
types/: Cargo.toml
types/src/: integer.rs  lib.rs  table.rs
types/table/: Cargo.toml
types/table/src/: lib.rs
types/value/: Cargo.toml
types/value/src/: lib.rs  sub_index.rs  to_scalars.rs  to_u256.rs  u256.rs  value_header.rs  word.rs  word_generic.rs
vm/: Cargo.toml
vm-circuit/: Cargo.toml
vm-circuit/src/: circuit.rs  circuit_inputs.rs  circuit_v2.rs  execution_circuit.rs  gadgets.rs  lib.rs  lookup_table.rs  poseidon_circuit.rs  public_inputs.rs  table.rs  utils.rs  witness.rs
vm-circuit/src/chips/: chip_tests.rs  code_chips.rs  execution_chip.rs  execution_chip_v2.rs  execution_chips.rs  memory_chip.rs  memory_chips.rs  mod.rs  poseidon_chip.rs  utilities.rs  utils.rs
vm-circuit/src/circuit_inputs/: bytecode_table.rs  execution_steps.rs  rw_operations.rs
vm-circuit/src/execution_circuit/: call_stack.rs  executions.rs  lookup_table.rs  step.rs  sub_index.rs  value.rs
vm-circuit/src/gadgets/: sub_index.rs
vm-circuit/src/lookup_table/: bitwise_table.rs  byecode_table.rs  constant_table.rs  fix_table.rs  function_table.rs  poseidon_table.rs  pow2.rs  utils.rs  ux_table.rs
vm-circuit/src/utils/: cached_region.rs  cell_manager.rs  cell_placement_strategy.rs  challenges.rs  rlc.rs  vm_constraint_builder.rs  word.rs
vm-circuit/src/witness/: arith_operations.rs  bitwise_table.rs  bytecode.rs  bytecode_table.rs  call_trace_table.rs  const_table.rs  constant.rs  exec_step.rs  execution_steps.rs  func_instantiation_table.rs  function.rs  function_calls.rs  generic_type_instantiations.rs  input_type_elements.rs  (+4 more)
vm/benches/: circuit_benchmark.rs
vm/src/: bytecode.rs  chip_tests.rs  circuit.rs  error.rs  evaluation_chip.rs  frame.rs  globals.rs  instructions.rs  interpreter.rs  lib.rs  loader.rs  locals.rs  move_circuit.rs  native_functions.rs  program_block.rs  runtime.rs  stack.rs  state.rs  test.rs  tests.rs  value.rs
vm/tests/: testsuite.rs
witness/: Cargo.toml  README.md
witness/src/: lib.rs  native_functions.rs  preprocessor.rs  public_inputs.rs  static_info.rs  step_state.rs  value.rs
witnesses/: Cargo.toml
witnesses/src/: lib.rs  preprocessor.rs  static_info.rs  step_state.rs
(+803 files in other folders)
