[workspace]
members = [
    "movelang",
    "common/logger",
    "common/error",
    #    "common/crypto",
    "common/types",
    "vm-circuit",
    #"vm",
    "functional-tests",
    #"cli",
    "aptos-move-witnesses"
]
resolver = "2"
[workspace.dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget.git", rev = "764a682" }
gadgets = { git = "https://github.com/zkmove/zkevm-circuits.git", rev = "89696678b", package = "gadgets" }
field-exts = { git = "https://github.com/zkmove/zkevm-circuits.git", rev = "89696678b", package = "eth-types" }
#generic-array = "0.14"
#tempfile = "3.10"
subtle = "2.5"
rayon = "1.10"
bytes = { version = "1.5" }
serde_json = { version = "1" }
move-compiler = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-compiler-v2 = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-binary-format = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-core-types = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-vm-runtime = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-vm-types = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-bytecode-verifier = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }
move-package = { git = "https://github.com/zkmove/aptos-core", rev = "2bc8aef9" }

strum_macros = "0.26"
strum = "0.26"
anyhow = "1.0.38"

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "unwind"
incremental = false

[profile.bench]
lto = true
