[workspace]
members = [
    "movelang",
    "common/logger",
    "common/types",
    "common/utility",
    "vm-circuit",
    "functional-tests",
    "cli",
    "aptos-move-witnesses"
]
resolver = "2"
[workspace.dependencies]
move-compiler = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-compiler-v2 = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-binary-format = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-core-types = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-vm-runtime = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-vm-types = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-bytecode-verifier = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }
move-package = { git = "https://github.com/zkmove/aptos-core", rev = "581d93fd" }

poseidon-circuit = { git = "https://github.com/zkmove/poseidon-circuit.git", branch = "main" }
poseidon-base = { git = "https://github.com/zkmove/poseidon-circuit.git", branch = "main" }

halo2curves = { version = "0.7.0" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.4.0", default-features = false, features = ["batch", "bits"] }
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.4.0" }

gadgets = { git = "https://github.com/zkmove/zkevm-circuits.git", branch = "main", package = "gadgets" }
field-exts = { git = "https://github.com/zkmove/zkevm-circuits.git", branch = "main", package = "field-exts" }

anyhow = "1.0.38"
bytes = { version = "1.5" }
rayon = "1.10"
serde_json = { version = "1" }
strum = "0.26"
strum_macros = "0.26"
subtle = "2.5"

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

#[profile.test]
#inherits = "release"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "unwind"
incremental = false

[profile.bench]
lto = true

#
[patch."https://github.com/privacy-scaling-explorations/halo2"]
halo2_proofs = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove" }
halo2_backend = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove" }