[package]
name = "aptos-move-witnesses"
version = "0.1.0"
edition = "2021"

[dependencies]
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-package = { workspace = true }
move-binary-format = { workspace = true }
logger = { path = "../common/logger" }
utility = {path = "../common/utility" }
movelang = { path = "../movelang" }
types = { path = "../common/types" }
serde = { version = "1.0.203", features = ["derive"] }
strum_macros = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
