[package]
name = "zkmove-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
circuit = { path = "../circuit" }
witnesses = { path = "../witnesses" }
halo2_proofs.workspace = true
move-package = { workspace = true }
move-core-types = { workspace = true }
log.workspace = true
shape-generator = { git = "https://github.com/zkmove/halo2-verifier.move", package = "shape-generator" }

ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4" }
ark-ec = { version = "0.4" }
anyhow = "1.0.38"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }

[dev-dependencies]

[[bin]]
name = "zkmove"
path = "src/main.rs"
