[package]
name = "zkmove-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
vm-circuit = { path = "../vm-circuit" }
witness = { path = "../witness" }
halo2 = { path = "../third-party/halo2" }
halo2_proofs.workspace = true
move-package = { workspace = true }
move-core-types = { workspace = true }
log.workspace = true
shape-generator = { git = "https://github.com/zkmove/halo2-verifier.move", package = "shape-generator" }

anyhow = "1.0.38"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }

[dev-dependencies]

[[bin]]
name = "zkmove"
path = "src/main.rs"
