[package]
name = "fast-circuit"
version = "0.1.0"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { package = "bellman_ce", version = "0.3.0" }
error = { path = "../common/error" }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
logger = { path = "../common/logger" }
movelang = { path = "../movelang" }
num-bigint = "0.2.3"
num-traits = "0.2.8"
rand_core = { version = "0.6", default-features = false }
move-binary-format = { git = "https://github.com/zkmove/diem", rev ="0e608052d180d5ef7e3c4a5884cbd26e5e8d1be6" }
move-vm-runtime = { git = "https://github.com/zkmove/diem", rev ="0e608052d180d5ef7e3c4a5884cbd26e5e8d1be6" }
halo2_proofs = { git = "https://github.com/guangyuz/halo2", rev = "3c0c07737509c0f592ec51904990094176413fa0" }
#halo2_proofs = { path = "../../halo2/halo2_proofs"}

[dev-dependencies]
datatest-stable = "0.1.1"
