[package]
name = "fast-circuit"
version = "0.1.0"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { package = "bellman_ce", version = "0.3.0" }
error = { path = "../common/error" }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
logger = { path = "../common/logger" }
movelang = { path = "../movelang" }
num-bigint = "0.2.3"
num-traits = "0.2.8"
rand_core = { version = "0.6", default-features = false }
move-binary-format = { git = "https://github.com/zkmove/move", rev = "4e8d09188f056bf7a5daba4095c6c9bdcc51b74f" }
move-vm-types = { git = "https://github.com/zkmove/move", rev = "4e8d09188f056bf7a5daba4095c6c9bdcc51b74f" }
move-vm-runtime = { git = "https://github.com/zkmove/move", rev = "4e8d09188f056bf7a5daba4095c6c9bdcc51b74f" }
halo2_proofs = { git = "https://github.com/zkmove/halo2", rev = "e5c022414e62154b66b9fbef463912768c15556a" }
#halo2_proofs = { path = "../../halo2/halo2_proofs"}

[dev-dependencies]
datatest-stable = "0.1.1"
