[package]
name = "functional-tests"
version = "0.3.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2021"

[dependencies]
logger = { path = "../common/logger" }
movelang = { path = "../movelang" }
types = { path = "../common/types" }
vm-circuit = { path = "../vm-circuit" }
vm = { path = "../vm" }
halo2_proofs.workspace = true
anyhow = "1"
rayon.workspace = true
rand = "0.8"
move-core-types = { workspace = true }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
datatest-stable = "0.2.9"
regex = "1.10"
walkdir = "2.3.2"
criterion = { git = "https://github.com/young-rocks/criterion.rs", rev = "98922e676bacc55ed2a27f65dcd2b18650ba12e9" }

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"

[[test]]
name = "testsuite"
harness = false

[[bench]]
name = "circuit_benchmark"
harness = false

