[package]
name = "movelang"
version = "0.1.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2018"

[dependencies]
logger = { path = "../common/logger" }
error = { path = "../common/error" }
fields = {path = "../common/fields"}
move-compiler = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-binary-format = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-core-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-runtime = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-bytecode-verifier = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }

anyhow = "1.0.38"
petgraph = "0.6"