[package]
name = "movelang"
version = "0.3.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2021"

[dependencies]
logger = { path = "../common/logger" }
error = { path = "../common/error" }
types = { path = "../common/types" }
move-compiler = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-binary-format = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-core-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-runtime = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-bytecode-verifier = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
halo2-base.workspace = true

anyhow = "1.0.38"
petgraph = "0.6"
