[package]
name = "types"
version = "0.4.0"
edition = "2021"

[dependencies]
halo2_proofs = { workspace = true }
field-exts = { path = "../third-party/field-exts" }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
strum.workspace = true
strum_macros.workspace = true

[features]
table-u16 = []