[package]
name = "vm-circuit"
version = "0.3.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2021"

[dependencies]
aptos-move-witnesses = { path = "../aptos-move-witnesses" }
crypto = { path = "../common/crypto" }
error = { path = "../common/error" }
logger = { path = "../common/logger" }
movelang = { path = "../movelang" }
types = { path = "../common/types" }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-package = { workspace = true }
move-vm-runtime = { workspace = true }
halo2_proofs = { workspace = true, features = ["dev-graph"] }
halo2_poseidon.workspace = true
field-exts.workspace = true
gadgets.workspace = true
#generic-array.workspace = true
instant = { version = "0.1", features = ["wasm-bindgen"] }
itertools = "0.10.5"
petgraph = "0.6"
plotters = { version = "0.3.0", default-features = false, features = ["svg_backend"] }
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
strum_macros.workspace = true
strum.workspace = true
[dev-dependencies]
datatest-stable = "0.1.1"

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"