[package]
name = "vm-circuit"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
aptos-move-witnesses = { path = "../aptos-move-witnesses" }
logger = { path = "../common/logger" }
movelang = { path = "../movelang" }
utility = { path = "../common/utility" }
types = { path = "../common/types" }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-package = { workspace = true }
halo2_proofs = { workspace = true }
halo2_backend = { workspace = true }
poseidon-circuit = { workspace = true }
poseidon-base = { workspace = true }
field-exts.workspace = true
gadgets.workspace = true
instant = { version = "0.1", features = ["wasm-bindgen"] }
itertools = { version = "0.13.0" }
plotters = { version = "0.3.0", default-features = false, features = ["svg_backend"] }
rand = { version = "0.8" }
strum_macros.workspace = true
strum.workspace = true
log = "0.4.27"

[dev-dependencies]

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"

[features]
test-circuits = []
table-u16 = []