[package]
name = "vm"
version = "0.3.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2018"

[dependencies]
error = { path = "../common/error" }
logger = { path = "../common/logger" }
types = { path = "../common/types" }
vm-circuit = { path = "../vm-circuit" }
movelang = { path = "../movelang"}
move-binary-format = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-runtime = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-core-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
halo2-base.workspace = true
petgraph = "0.6"
web3 = { version = "0.19", default-features=false, features=["http-tls"] }
tokio = { version = "1.29", default-features=false }
[dev-dependencies]
datatest-stable = "0.1.1"
