[package]
name = "vm"
version = "0.3.0"
authors = [
    "Guangyu Zhu <guangyuz@gmail.com>",
    "Luxebeng <luxebeng@gmail.com>",
]
edition = "2021"

[dependencies]
error = { path = "../common/error" }
logger = { path = "../common/logger" }
types = { path = "../common/types" }
vm-circuit = { path = "../vm-circuit" }
movelang = { path = "../movelang" }
move-binary-format = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-vm-runtime = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
move-core-types = { git = "https://github.com/young-rocks/move", rev = "b036995a" }
halo2_proofs.workspace = true
petgraph = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web3 = { version = "0.18.0", default-features = false, features = ["http-tls"] }
tokio = { version = "1.26.0", default-features = false }

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"

[dev-dependencies]
datatest-stable = "0.1.1"
