[package]
name = "witness"
version = "0.4.0"
edition = "2021"

[dependencies]
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-package = { workspace = true }
move-binary-format = { workspace = true }
poseidon-base = { workspace = true }
halo2curves = { workspace = true }
types = { path = "../types" }
movelang = { path = "../third-party/movelang" }
circuit-tool = { path = "../third-party/circuit-tool" }
field-exts = { path = "../third-party/field-exts" }
util = { path = "../third-party/util" }
serde = { version = "1.0.203", features = ["derive"] }
strum_macros = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0.38"
num-traits = "0.2"