[package]
name = "error"
version = "0.1.0"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
logger = { path = "../logger" }
halo2_proofs = { git = "https://github.com/young-rocks/halo2", rev = "445a4e275d7f3088d48d1eb27ba177644b9aa550" }
#halo2_proofs = { path = "../../../halo2/halo2_proofs"}
