[package]
name = "types"
version = "0.1.0"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]
edition = "2018"

[dependencies]
halo2_proofs = { git = "https://github.com/zkmove/halo2", rev = "e5c022414e62154b66b9fbef463912768c15556a" }
#halo2_proofs = { path = "../../../halo2/halo2_proofs"}

error = { path = "../../common/error" }
movelang = { path = "../../movelang" }
